# Duck-Atari

./: .gitignore  CMakeLists.txt  LICENSE  README.md  enums.h  local_history.patch  main.c  structs.h
Base/: background.c  files.c  general.c  keys.c  screen.c  sounds.c  startup.c  text.c  texture.c  timer.c
game/: Diff.c  base.c  bomber.c  bullets.c  cargoSpaceShips.c  collision.c  debug.c  explosions.c  gameMovements.c  game_structs.h  gameover.c  jets.c  math.c  mines.c  rewards.c
menu/: leaderboard.c  menu.c  settings.c
